kubernetes/zitadel/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zitadel
  namespace: zitadel
  labels:
    helm.sh/chart: zitadel-6.2.0
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v2.43.5"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: start
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_35=App Doesn't Support
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: zitadel
      app.kubernetes.io/instance: zitadel
  template:
    metadata:
      labels:
        app.kubernetes.io/component: start
        app.kubernetes.io/name: zitadel
        app.kubernetes.io/instance: zitadel
    spec:
      # tolerations:
      #   - key: node-role.kubernetes.io/control-plane
      #     effect: NoSchedule
      #   - key: node-role.kubernetes.io/master
      #     effect: NoSchedule
      #   - key: node-role.kubernetes.io/infra
      #     effect: NoSchedule
      # topologySpreadConstraints:
      #   - maxSkew: 1
      #     topologyKey: topology.kubernetes.io/zone
      #     whenUnsatisfiable: DoNotSchedule
      #     labelSelector:
      #       matchLabels:
      #         app.kubernetes.io/name: zitadel
      #   - maxSkew: 1
      #     topologyKey: kubernetes.io/hostname
      #     whenUnsatisfiable: DoNotSchedule
      #     labelSelector:
      #       matchLabels:
      #         app.kubernetes.io/name: zitadel
      serviceAccountName: zitadel
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
        - name: zitadel
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          image: "ghcr.io/zitadel/zitadel:v2.56.0@sha256:ceb5c0ad89720ca8d562d1ae86e75c37c33a8b621d98e39a1d86262cae013461"
          imagePullPolicy: IfNotPresent
          args:
            - start
            - --config
            - /config/zitadel-config-yaml
            - --config
            - /.secrets/zitadel-secrets-yaml/zitadel-secrets-yaml
            - --masterkeyFromEnv
          ports:
            - containerPort: 8080
              name: http2-server
              protocol: TCP
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /debug/healthz
              port: http2-server
              httpHeaders:
                - name: Host
                  value: zitadel.apps.okd.garrettholland.com
            initialDelaySeconds: 0
            periodSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /debug/ready
              port: http2-server
              httpHeaders:
                - name: Host
                  value: zitadel.apps.okd.garrettholland.com
            initialDelaySeconds: 0
            periodSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              scheme: HTTPS
              path: /debug/ready
              port: http2-server
              httpHeaders:
                - name: Host
                  value: zitadel.apps.okd.garrettholland.com
            periodSeconds: 1
            failureThreshold: 30
          volumeMounts:
            - name: zitadel-config-yaml
              mountPath: /config
            - name: zitadel-secrets-yaml
              mountPath: /.secrets/zitadel-secrets-yaml
            - name: certificate
              mountPath: /ssl
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: zitadel-config-yaml
          configMap:
            name: zitadel-config-yaml
        - name: zitadel-secrets-yaml
          secret:
            secretName: zitadel-secrets-yaml
        - name: certificate
          secret:
            secretName: zitadel-cert
