kubernetes/zitadel/base/route.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: zitadel
  namespace: zitadel
  labels:
    app.kubernetes.io/instance: zitadel
    external-dns: enabled
  annotations:
    route.openshift.io/termination: reencrypt
    route.openshift.io/destination-ca-certificate-secret: ca-bundle
    external-dns.alpha.kubernetes.io/hostname: zitadel.garrettholland.com
spec:
  ingressClassName: openshift-default
  rules:
    - host: zitadel.garrettholland.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: zitadel
                port:
                  name: http2-server
  tls:
    - hosts:
        - zitadel.garrettholland.com
      secretName: zitadel-cert
